End of experiment 1

--- a/astro/src/content/docs/index.mdx
+++ b/astro/src/content/docs/index.mdx
@@ -1,4 +1,5 @@
 ---
+
 title: Welcome to Starlight
 description: Get started building your docs site with Starlight.
 template: splash
@@ -15,6 +16,8 @@ hero:
       link: https://starlight.astro.build
       icon: external
 ---
+
+<script src="/xapiscript.js"></script>
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
